generate script is still failing, but merged Fiz's PR
