# transcendence-app/swagger-spec.yaml
@@ -323,11 +323,11 @@ paths:
         "503":
           description: Service unavailable
       tags: *a5
-  "/api/v1/chatroom/{chatId}/members":
+  "/api/v1/chat/room/{Id}/members":
     post:
       operationId: ChatController_createChatRoomMember
       parameters:
-        - name: chatId
+        - name: Id
           required: true
           in: path
           schema:
